<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fft</name>
  <version>0.0.0</version>
  <description>Fast-Fourier analysis tool of time series data published in ROS2 topic. Plots FFT result.</description>
  <maintainer email="dzmitry.maladzenkau@rptu.de">Dzmitry Maladzenkau</maintainer>
  <maintainer email="eric.schoeneberg@rptu.de">Eric Schoeneberg</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <exec_depend>python-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
